--- a/1.html
+++ b/1.html
@@ -1,35 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <title>1707 김호준</title>
-  <meta charset="utf-8">
+  <style>
+.button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+  </style>
 </head>
-<body>
-  <h1>1707 김호준</h1><hr>
-  <a href="2.html">링크 연결하기</a><br><hr>
-  hr태그 - 가로줄 긋기<br><hr>
-  br태그 - 줄바꿈<br><hr>
-  <strong>strong태그 - 두껍게</strong><br><hr>
-  <u>u태그 - 밑줄</u><br><hr>
-  <i>i태그 - 기울이기</i><br><hr>
-  <del>del태그 - 중앙선</del><br><hr>
-  <sup>sup태그 - 위쪽으로</sup><br><hr>
-  <sub>sub태그 - 아래쪽으로</sub><br><hr>
-  <a href>a태그 - 링크 생성</a><br><hr>
-  <input type="checkbox"><input type="checkbox">체그박스 만들기
-  <input type="checkbox"><input type="checkbox"><br><hr>
-  <textarea cols=15 rows=1> </textarea>   글씨 입력 창 : textarea<br><hr>
-  <div style="color:red;">빨</div><div style="color:orange;">주</div>
-  <div style="color:yellow;">노</div><div style="color:green;">초</div>
-  <div style="color:blue;">파</div><div style="color:purple;">보</div><br><hr>
-  <img src="Thoughtful.png" width=100 height=100>
-  <h3>사진 불러오기</h3>
-  <img src="Smile (2).png" width=130 height=100><br><hr>
-  <h1>h1태그</h1><br>
-  <h2>h2태그</h2><br>
-  <h3>h3태그</h3><br>
-  <h4>h4태그</h4><br>
-  <h5>h5태그</h5><br>
-  <h6>h6태그</h6><br><hr>
-</body>
+  <body>
+    <button class="button" onclick="alert('민주')">머리</button>
+  </body>
 </html>
