--- a/1.html
+++ b/1.html
@@ -27,6 +27,6 @@
   </style>
 </head>
   <body>
-    <button class="button" onclick="alert('민주')">머리</button>
+    <button class="button" onclick="alert('민둥머리')">민주는 무엇일까요?</button>
   </body>
 </html>
