--- a/1.html
+++ b/1.html
@@ -3,7 +3,8 @@
 <head>
   <style>
 .button {
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
   padding: 15px 25px;
   font-size: 24px;
   cursor: pointer;
