--- a/1.html
+++ b/1.html
@@ -28,6 +28,6 @@
   </style>
 </head>
   <body>
-    <button class="button" onclick="alert('민둥머리')">민주는 무엇일까요?</button>
+    <button class="button" onclick="alert('1')">?</button>
   </body>
 </html>
